--- a/src/App.css
+++ b/src/App.css
@@ -138,18 +138,18 @@ body {
 }
 
 .btn-lg {
-  margin: 0.3125rem 0.15625rem;
-  padding: 0.4375rem 1.5625rem;
+  margin: 0.3125rem 0.35625rem;
+  padding: 0.7375rem 3.5625rem;
   font-size: 20px;
 }
 
 .wrapper {
+  z-index: 9;
   width: 100%;
   height: 100%;
   text-align: center;
   flex-grow: 1;
   position: relative;
-  z-index: 10;
 }
 
 .timers {
@@ -174,10 +174,10 @@ body {
 }
 
 .controls {
-  z-index: 9;
-  background: #61dafb;
-  top: 10px;
-  margin: 0 auto;
+  z-index: 8;
+  bottom: 15%;
+  left: 40%;
   display: inline-block;
-  width: 50%;
+  width: 20%;
+  position: fixed;
 }
