--- a/src/App.css
+++ b/src/App.css
@@ -50,8 +50,10 @@
 }
 
 /* Roboto Font */
-body {
+body, html {
   font-family: "Roboto", sans-serif;
+  min-height: 100% !important;
+  height: 100%;
 }
 
 /*Container class*/
@@ -196,4 +198,18 @@ body {
   z-index: 8;
   left: 5px;
   bottom: 5px;
+}
+
+.license-text {
+  padding-top: 50px;
+  height: 100%;
+  width: 100%;
+  color: #222222;
+  text-align: center;
+  font-size: 33px;
+  line-height: 1.6;
+}
+
+.link {
+  font-weight: bold;
 }
